--- a/EFSI/JavaScript Nativo/JS-Clase1/index.html
+++ b/EFSI/JavaScript Nativo/JS-Clase1/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="js/codigo.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <p id="parrafo">parrafo</p>
+    <div class="container">
+    </div>
 </body>
 </html>
