[EFSI] - TP2 Terminado

--- a/EcmaScript 6/TP2/index.html
+++ b/EcmaScript 6/TP2/index.html
@@ -13,8 +13,13 @@
         <div id="nuevaTarea">
             <input type="text" id="tareaInput" placeholder="Inserte tarea">
             <button id="push" onclick="agregarTarea()">Agregar</button>
+            <button id="push" onclick="mostrarMasRapida()">Más Rápida</button>
         </div>
-        <div id="tareas">
+        <div class="tareas" id="top">
+        </div>
+        <div class="tareas" id="bottom">
+            <hr>
+            <div id="tareaMasRapida"></div>
         </div>
     </div>
 
